--- a/mNet/Login.storyboard
+++ b/mNet/Login.storyboard
@@ -202,7 +202,7 @@ Analyse your own data with customized reports. Correlate parameters to reach con
                                                     <constraint firstAttribute="height" constant="22" id="AC2-ci-MOg"/>
                                                     <constraint firstAttribute="width" constant="23" id="dcZ-S8-xTq"/>
                                                 </constraints>
-                                                <state key="normal" image="eye"/>
+                                                <state key="normal" image="showPassword"/>
                                                 <connections>
                                                     <action selector="showHidePasswordButtonAction:" destination="OM2-0e-Tyo" eventType="touchUpInside" id="1TQ-S9-vtI"/>
                                                 </connections>
@@ -299,6 +299,7 @@ Analyse your own data with customized reports. Correlate parameters to reach con
                         <outlet property="passwordViewHeight" destination="7Nh-Kj-ew0" id="FVx-j2-W4u"/>
                         <outlet property="proceedButton" destination="pfp-hv-dLo" id="KqV-1i-DrY"/>
                         <outlet property="proceedButtonHeight" destination="iLl-OP-I2P" id="3WU-tP-USw"/>
+                        <outlet property="showHidePasswordButton" destination="4gM-An-GqP" id="TgX-sx-9Us"/>
                         <outlet property="signInButton" destination="kKd-RF-tff" id="V5s-w2-ech"/>
                         <outlet property="signInButtonHeight" destination="pJX-es-mxn" id="3Wi-oa-fFp"/>
                         <outlet property="signInToYourAccountLabel" destination="RgB-Ys-snv" id="g0N-mO-WZF"/>
@@ -310,7 +311,7 @@ Analyse your own data with customized reports. Correlate parameters to reach con
         </scene>
     </scenes>
     <resources>
-        <image name="eye" width="32" height="32"/>
         <image name="heroLogo" width="87" height="100"/>
+        <image name="showPassword" width="32" height="32"/>
     </resources>
 </document>
