--- a/mNet/Login.storyboard
+++ b/mNet/Login.storyboard
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OM2-0e-Tyo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OM2-0e-Tyo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue-Bold</string>
+        </array>
         <array key="SanFranciscoDisplay-Bold.otf">
             <string>SanFranciscoDisplay-Bold</string>
         </array>
@@ -27,10 +30,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" tag="12345" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZpG-Y4-Epn">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="20" width="355" height="647"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brandIntelleLogo" translatesAutoresizingMaskIntoConstraints="NO" id="2Ix-Rj-yrm">
-                                        <rect key="frame" x="37.5" y="80" width="300" height="78.5"/>
+                                        <rect key="frame" x="27" y="80" width="300" height="78.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="JZH-pw-XBp"/>
                                             <constraint firstAttribute="height" constant="78.5" id="JiB-Fy-5Jj"/>
@@ -49,10 +52,9 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter your Email ID" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RSB-H9-XkY" customClass="CustomBrownTextColorTextfield" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="29.5" y="299.5" width="316" height="36"/>
+                                        <rect key="frame" x="29.5" y="299.5" width="297.5" height="36"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="316" id="Jq1-Pf-7zR"/>
                                             <constraint firstAttribute="height" constant="36" id="U0J-q0-kgT"/>
                                         </constraints>
                                         <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -77,10 +79,9 @@
                                         </connections>
                                     </textField>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-RF-tff" customClass="CustomBlueBackgroundButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="444.5" width="320" height="36"/>
+                                        <rect key="frame" x="27" y="444.5" width="300" height="36"/>
                                         <color key="backgroundColor" red="0.011764705882352941" green="0.51764705882352935" blue="0.80784313725490198" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="320" id="kdp-qU-CZg"/>
                                             <constraint firstAttribute="height" constant="36" id="pJX-es-mxn"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="14"/>
@@ -98,7 +99,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0I-hd-kCF" customClass="CustomRedBackgroundColorButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="444" width="320" height="36"/>
+                                        <rect key="frame" x="27" y="444" width="300" height="36"/>
                                         <color key="backgroundColor" red="0.8666666666666667" green="0.29411764705882354" blue="0.22352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="FYp-BW-0xt"/>
@@ -117,10 +118,9 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pfp-hv-dLo" userLabel="Proceed Button" customClass="CustomBlueBackgroundButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="444.5" width="320" height="36"/>
+                                        <rect key="frame" x="27" y="444.5" width="300" height="36"/>
                                         <color key="backgroundColor" red="0.01176470588" green="0.51764705879999995" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="320" id="Kbs-Js-vJI"/>
                                             <constraint firstAttribute="height" constant="36" id="iLl-OP-I2P"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="14"/>
@@ -138,10 +138,10 @@
                                         </connections>
                                     </button>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OnW-hF-Wwm" userLabel="Password View">
-                                        <rect key="frame" x="29.5" y="335.5" width="316" height="82"/>
+                                        <rect key="frame" x="29.5" y="335.5" width="297.5" height="82"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter your Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dDm-Ww-etm" customClass="CustomBrownTextColorTextfield" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="46" width="316" height="36"/>
+                                                <rect key="frame" x="0.0" y="46" width="297.5" height="36"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="999" constant="36" id="Zti-xR-WbC"/>
@@ -174,7 +174,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gM-An-GqP">
-                                                <rect key="frame" x="284" y="53" width="23" height="22"/>
+                                                <rect key="frame" x="265.5" y="53" width="23" height="22"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="22" id="AC2-ci-MOg"/>
                                                     <constraint firstAttribute="width" constant="23" id="dcZ-S8-xTq"/>
@@ -199,7 +199,7 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vu1-Qt-yj7" customClass="CustomRedBackgroundColorButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="496.5" width="320" height="36"/>
+                                        <rect key="frame" x="27" y="496.5" width="300" height="36"/>
                                         <color key="backgroundColor" red="0.81568627449999997" green="0.0078431372550000003" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="t8d-mu-Phe"/>
@@ -222,9 +222,11 @@
                                 <constraints>
                                     <constraint firstItem="kKd-RF-tff" firstAttribute="top" secondItem="OnW-hF-Wwm" secondAttribute="bottom" constant="27" id="4DD-YI-6EV"/>
                                     <constraint firstItem="vu1-Qt-yj7" firstAttribute="top" secondItem="kKd-RF-tff" secondAttribute="bottom" constant="16" id="7Qm-mq-A1T"/>
+                                    <constraint firstItem="2Ix-Rj-yrm" firstAttribute="leading" secondItem="ZpG-Y4-Epn" secondAttribute="leading" constant="27" id="DTP-Po-TlL"/>
                                     <constraint firstItem="OnW-hF-Wwm" firstAttribute="trailing" secondItem="RSB-H9-XkY" secondAttribute="trailing" id="DbY-XH-1tM"/>
                                     <constraint firstItem="vu1-Qt-yj7" firstAttribute="leading" secondItem="pfp-hv-dLo" secondAttribute="leading" id="F1q-vQ-NYf"/>
                                     <constraint firstItem="pfp-hv-dLo" firstAttribute="leading" secondItem="kKd-RF-tff" secondAttribute="leading" id="Gu6-MK-yq3"/>
+                                    <constraint firstItem="RSB-H9-XkY" firstAttribute="leading" secondItem="ZpG-Y4-Epn" secondAttribute="leading" constant="29" id="H65-lg-1VV"/>
                                     <constraint firstItem="RSB-H9-XkY" firstAttribute="leading" secondItem="kCb-WY-YI5" secondAttribute="leading" id="Hzw-fI-BWE"/>
                                     <constraint firstItem="pfp-hv-dLo" firstAttribute="trailing" secondItem="kKd-RF-tff" secondAttribute="trailing" id="Kky-7Q-NaV"/>
                                     <constraint firstItem="kCb-WY-YI5" firstAttribute="leading" secondItem="RgB-Ys-snv" secondAttribute="leading" id="MkI-SE-QrI"/>
@@ -236,12 +238,14 @@
                                     <constraint firstItem="kCb-WY-YI5" firstAttribute="top" secondItem="RgB-Ys-snv" secondAttribute="bottom" constant="30" id="a4p-Xo-Ugb"/>
                                     <constraint firstItem="RgB-Ys-snv" firstAttribute="top" secondItem="2Ix-Rj-yrm" secondAttribute="bottom" constant="63" id="avz-Je-8ZC"/>
                                     <constraint firstItem="RSB-H9-XkY" firstAttribute="centerX" secondItem="ZpG-Y4-Epn" secondAttribute="centerX" id="ebU-7i-9DK"/>
+                                    <constraint firstItem="kKd-RF-tff" firstAttribute="leading" secondItem="ZpG-Y4-Epn" secondAttribute="leading" constant="27" id="ggU-f8-tP0"/>
+                                    <constraint firstAttribute="trailing" secondItem="kKd-RF-tff" secondAttribute="trailing" constant="27" id="gwO-sq-Kg1"/>
                                     <constraint firstItem="RSB-H9-XkY" firstAttribute="top" secondItem="kCb-WY-YI5" secondAttribute="bottom" constant="11" id="h14-Yb-Jss"/>
                                     <constraint firstItem="Y0I-hd-kCF" firstAttribute="width" secondItem="kKd-RF-tff" secondAttribute="width" id="jrM-9z-jDS"/>
                                     <constraint firstItem="vu1-Qt-yj7" firstAttribute="trailing" secondItem="pfp-hv-dLo" secondAttribute="trailing" id="klX-cW-Rqs"/>
                                     <constraint firstItem="2Ix-Rj-yrm" firstAttribute="top" secondItem="ZpG-Y4-Epn" secondAttribute="top" constant="80" id="qRa-T7-f8J"/>
                                     <constraint firstItem="OnW-hF-Wwm" firstAttribute="leading" secondItem="RSB-H9-XkY" secondAttribute="leading" id="r4k-1B-2ef"/>
-                                    <constraint firstItem="2Ix-Rj-yrm" firstAttribute="centerX" secondItem="ZpG-Y4-Epn" secondAttribute="centerX" id="ruj-wq-Rxn"/>
+                                    <constraint firstAttribute="trailing" secondItem="2Ix-Rj-yrm" secondAttribute="trailing" constant="27" id="rXP-tE-0Uk"/>
                                     <constraint firstItem="Y0I-hd-kCF" firstAttribute="leading" secondItem="kKd-RF-tff" secondAttribute="leading" id="wqQ-kT-Czr"/>
                                     <constraint firstItem="OnW-hF-Wwm" firstAttribute="top" secondItem="RSB-H9-XkY" secondAttribute="bottom" id="yLz-VW-NA6"/>
                                 </constraints>
@@ -251,6 +255,7 @@
                         <constraints>
                             <constraint firstItem="6wI-St-DGY" firstAttribute="trailing" secondItem="ZpG-Y4-Epn" secondAttribute="trailing" id="8SK-t7-eNb"/>
                             <constraint firstItem="ZpG-Y4-Epn" firstAttribute="top" secondItem="6wI-St-DGY" secondAttribute="top" id="IDa-n8-Mqj"/>
+                            <constraint firstItem="ZpG-Y4-Epn" firstAttribute="width" secondItem="Z5M-RV-jZv" secondAttribute="width" id="dCc-DS-i3X"/>
                             <constraint firstItem="ZpG-Y4-Epn" firstAttribute="leading" secondItem="6wI-St-DGY" secondAttribute="leading" id="iur-9m-kMB"/>
                             <constraint firstItem="6wI-St-DGY" firstAttribute="bottom" secondItem="ZpG-Y4-Epn" secondAttribute="bottom" id="mvA-cC-be5"/>
                         </constraints>
